k8s_lab_session/k8s/ingress/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: k8s-lab
spec:
  stripPrefix:
    prefixes:
      - /api
