k8s_lab_session/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: k8s-lab
  annotations:
    # Use Traefik strip-api middleware
    traefik.ingress.kubernetes.io/router.middlewares: k8s-lab-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: mern.<NODE-IP>.nip.io # Replace <NODE-IP> with your cluster node IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
  tls:
  # Placeholder for TLS configuration
  - hosts:
    - mern.<NODE-IP>.nip.io
    secretName: mern-tls-placeholder
